<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="struct_ADS_Reichinger" Id="{c2d35fc3-1351-48b8-b9fa-6c5091b82030}">
    <Declaration><![CDATA[TYPE struct_ADS_Reichinger :
STRUCT
	int_liveCount		: INT;	
	bIsEnableEMS		: BOOL;
	bStateAllowChrgFromGrid		: BOOL;
	rHeartbeatEMS		: REAL;
	rErrorWarningEMS 	: REAL;
	rReadyEMS 			: REAL;
	iOperationModeEMS 	: INT;
	byMaxDepthOfDischrgEPO 		: BYTE;
	byReserveSOCEPO 	: BYTE;
	byPrioMinChrgBattSOCInEPO 	: BYTE;
	byResChrgfromGridToBatt 	: BYTE;
	uiUpdateTime 		: UINT;
	bEnableEMS			: BOOL;
	rNewBatteryPowerEMS : REAL;
	bHPActivate			: BOOL;
	bAllowChrgFromGrid	: BOOL;
	bControllingState	: BOOL;
	rMainFuseCSEMS		: REAL;
	lrPowerPV_1			: LREAL;
	lrPowerPV_2			: LREAL;
	lrPowerPV_3			: LREAL;
	lrPowerPV_4			: LREAL;
	lrPowerPV_5			: LREAL;
	lrPowerPV_6			: LREAL;
	lrPowerPV_7			: LREAL;
	lrPowerPV_8			: LREAL;
	lrPowerPV_9			: LREAL;
	lrPowerPV_10		: LREAL;
	lrPowerPV			: LREAL;
	lrPowerGrid			: LREAL;
	rSizeGridConn 		: REAL;
	lrPowerBattery		: LREAL;
	dwSOCBattery		: DWORD;
	rTargetPowerBattery	: REAL;
	bIsEnabledBattery	: BOOL;
	bSResetBattery		: BOOL;
	lrActualCapacityBattery		: LREAL;
	lrMaxCapacityBattery 		: LREAL;
	byPrioBattery		: BYTE;
	bEnableBattery		: BOOL;
	bResetBattery		: BOOL;
	lrPowerHouse		: LREAL;
	bEnableHouse		: BOOL;
	bHouseEnabled		: BOOL;
	byStateMinPowerCS	: BYTE;
	rTargetPowerCS		: REAL;
	bIsEnabledCS		: BOOL;
	byPrioCS			: BYTE;
	bySOC_E_CS			: BYTE;
	bySOC_D_CS			: BYTE;
	rMaxPowerCS			: REAL;
	byMinPowerCS		: BYTE;
	bEnabledCS			: BOOL;
	lrCounterCS			: LREAL;
	lrCounterPV			: LREAL;
	lrCounterGridCons	: LREAL;
	lrCounterGridProd	: LREAL;
	lrCounterBattCons	: LREAL;
	lrCounterBattProd	: LREAL;
	lrPowerCS			: LREAL;
	bCarConnected		: BOOL;
	rChrgTime			: REAL;
	iMessageEMS			: INT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>