<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="prgPV" Id="{5e3275d5-2292-4d7b-93d8-80b9bda254fa}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM prgPV
VAR	
	lrPowerPV_1: LREAL;							//{#lynus.ag#()}
	lrPowerPV_2: LREAL;							//{#lynus.ag#()}
	lrPowerPV_3: LREAL;							//{#lynus.ag#()}
	lrPowerPV_4: LREAL;							//{#lynus.ag#()}
	lrPowerPV_5: LREAL;							//{#lynus.ag#()}
	lrPowerPV_6: LREAL;							//{#lynus.ag#()}
	lrPowerPV_7: LREAL;							//{#lynus.ag#()}
	lrPowerPV_8: LREAL;							//{#lynus.ag#()}
	lrPowerPV_9: LREAL;							//{#lynus.ag#()}
	lrPowerPV_10: LREAL;							//{#lynus.ag#()}
	lrPowerPV: LREAL;							//{#lynus.ag#()}
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[prgPV.lrPowerPV_1		:=		prg_ADS.struct_received.lrPowerPV_1			;
prgPV.lrPowerPV_2		:=		prg_ADS.struct_received.lrPowerPV_2			;
prgPV.lrPowerPV_3		:=		prg_ADS.struct_received.lrPowerPV_3			;
prgPV.lrPowerPV_4		:=		prg_ADS.struct_received.lrPowerPV_4			;
prgPV.lrPowerPV_5		:=		prg_ADS.struct_received.lrPowerPV_5			;
prgPV.lrPowerPV_6		:=		prg_ADS.struct_received.lrPowerPV_6			;
prgPV.lrPowerPV_7		:=		prg_ADS.struct_received.lrPowerPV_7			;
prgPV.lrPowerPV_9		:=		prg_ADS.struct_received.lrPowerPV_9			;
prgPV.lrPowerPV_10		:=		prg_ADS.struct_received.lrPowerPV_10		;
prgPV.lrPowerPV			:=		prg_ADS.struct_received.lrPowerPV			;
]]></ST>
    </Implementation>
    <LineIds Name="prgPV">
      <LineId Id="6" Count="1" />
      <LineId Id="28" Count="7" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>